--- a/skins/true-grit/style.css
+++ b/skins/true-grit/style.css
@@ -702,7 +702,14 @@ body::before {
 #infobox .filter-group {
     display: flex;
     align-items: center;
-    gap: 40px;
+    gap: 8px;
+}
+
+#infobox .filter-group form {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
 }
 
 #infobox label.dim {
